backend_of_service/k8s/cluster_ip_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: predictor-svc
  labels:
    app: predictor
spec:
  selector:
    app: predictor
  ports:
    - protocol: TCP
      name: predictor
      port: 80
      targetPort: 80
